uneven blockquote bug fixed by changing 'blockquote to li.

--- a/social-proof-section-master/style.scss
+++ b/social-proof-section-master/style.scss
@@ -176,7 +176,7 @@ ul li{
 
 .quotes {
   --spacer: 2rem;
-  blockquote {
+  li {
     max-width: 25rem;
     background: var(--clr-primary-700);
     color: var(--clr-neutral-200);
@@ -197,6 +197,7 @@ ul li{
   display: flex;
   flex-direction: column;
   gap: 1em;
+
   @media(min-width: 50em){
     flex-direction: row;
     }
